--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,9 @@
       <form id="taskForm" class="form">
         <input type="text" id="title" placeholder="Title" required />
         <textarea id="description" placeholder="Description"></textarea>
-        <input type="date" id="dueDate" placeholder="YYYY-MM-DD" />
+        <div class="date-input-wrapper">
+          <input type="date" id="dueDate" placeholder="YYYY-MM-DD" />
+        </div>
         <button type="submit">Add Task</button>
       </form>
 
