--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/static/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -35,6 +35,7 @@
             id="taskDate"
             class="date-input"
             placeholder="Select due date..."
+            required
           />
         </div>
 
@@ -46,6 +47,7 @@
         class="search-bar"
         id="searchInput"
         placeholder="Search tasks..."
+        oninput="filterTasks()"
       />
 
       <h2>Tasks</h2>
@@ -53,14 +55,18 @@
         <table id="tasksTable">
           <thead>
             <tr>
-              <th>Title <span class="sort-icon">▼</span></th>
+              <th class="sortable" onclick="sortTasks('title')">
+                Title <span class="sort-icon" id="titleSortIcon"></span>
+              </th>
               <th>Description</th>
-              <th>Due Date</th>
+              <th class="sortable" onclick="sortTasks('date')">
+                Due Date <span class="sort-icon" id="dateSortIcon"></span>
+              </th>
               <th>Status</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody id="tasksList">
+            <tr class="no-results">
               <td colspan="4">No results found</td>
             </tr>
           </tbody>
@@ -72,14 +78,20 @@
         <table id="completedTasksTable">
           <thead>
             <tr>
-              <th>Title <span class="sort-icon">▼</span></th>
+              <th class="sortable" onclick="sortCompletedTasks('title')">
+                Title
+                <span class="sort-icon" id="completedTitleSortIcon"></span>
+              </th>
               <th>Description</th>
-              <th>Due Date</th>
+              <th class="sortable" onclick="sortCompletedTasks('date')">
+                Due Date
+                <span class="sort-icon" id="completedDateSortIcon"></span>
+              </th>
               <th>Status</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody id="completedTasksList">
+            <tr class="no-results">
               <td colspan="4">No results found</td>
             </tr>
           </tbody>
@@ -90,13 +102,38 @@
     <button class="night-mode-toggle" id="nightModeToggle">🌙</button>
 
     <script>
+      // Task management functionality
+      let tasks = [];
+      let completedTasks = [];
+      let sortField = "title";
+      let sortDirection = "desc";
+      let completedSortField = "title";
+      let completedSortDirection = "desc";
+
       // Initialize Flatpickr for reliable date input
       document.addEventListener("DOMContentLoaded", function () {
+        // Get today's date at midnight (start of day)
+        const today = new Date();
+        today.setHours(0, 0, 0, 0);
+
         flatpickr("#taskDate", {
           dateFormat: "m/d/Y",
           disableMobile: true, // Force the use of the non-native picker on mobile
           allowInput: true,
-          defaultDate: "today",
+          defaultDate: today,
+          minDate: today, // Prevent selection of dates before today
+          disable: [
+            function (date) {
+              // Disable dates before today
+              return date < today;
+            },
+          ],
+          // Show a message when trying to select a disabled date
+          onDayCreate: function (dObj, dStr, fp, dayElem) {
+            if (dayElem.dateObj < today) {
+              dayElem.title = "Past dates cannot be selected";
+            }
+          },
         });
 
         // Night mode toggle functionality
@@ -110,15 +147,246 @@
             : "🌙";
         });
 
-        // Task form submission (placeholder functionality)
+        // Task form submission
         const taskForm = document.getElementById("taskForm");
         taskForm.addEventListener("submit", function (e) {
           e.preventDefault();
-          // Here you would normally handle the task creation
-          alert("Task added successfully!");
+
+          // Get form values
+          const title = document.getElementById("taskTitle").value.trim();
+          const description = document
+            .getElementById("taskDescription")
+            .value.trim();
+          const dateStr = document.getElementById("taskDate").value;
+
+          if (!title || !dateStr) {
+            alert("Please fill in all required fields");
+            return;
+          }
+
+          // Create new task object
+          const newTask = {
+            id: Date.now(), // Use timestamp as unique ID
+            title: title,
+            description: description,
+            date: new Date(dateStr),
+            dateStr: dateStr,
+            completed: false,
+          };
+
+          // Add task to array
+          tasks.push(newTask);
+
+          // Update the UI
+          renderTasks();
+
+          // Reset form
           taskForm.reset();
+
+          // Reset the date picker to today
+          const fp = document.querySelector("#taskDate")._flatpickr;
+          fp.setDate(today);
+
+          alert("Task added successfully!");
         });
+
+        // Set initial sort field
+        sortField = "title";
+        sortDirection = "desc";
+        completedSortField = "title";
+        completedSortDirection = "desc";
+
+        // Initial render
+        renderTasks();
+        updateSortIcons();
       });
+
+      // Render tasks to the tables
+      function renderTasks() {
+        const tasksList = document.getElementById("tasksList");
+        const completedTasksList =
+          document.getElementById("completedTasksList");
+
+        // Sort tasks
+        const sortedTasks = [...tasks].sort((a, b) => {
+          if (sortField === "title") {
+            return sortDirection === "asc"
+              ? a.title.localeCompare(b.title)
+              : b.title.localeCompare(a.title);
+          } else if (sortField === "date") {
+            return sortDirection === "asc" ? a.date - b.date : b.date - a.date;
+          }
+          return 0;
+        });
+
+        const sortedCompletedTasks = [...completedTasks].sort((a, b) => {
+          if (completedSortField === "title") {
+            return completedSortDirection === "asc"
+              ? a.title.localeCompare(b.title)
+              : b.title.localeCompare(a.title);
+          } else if (completedSortField === "date") {
+            return completedSortDirection === "asc"
+              ? a.date - b.date
+              : b.date - a.date;
+          }
+          return 0;
+        });
+
+        // Filter tasks based on search
+        const searchTerm = document
+          .getElementById("searchInput")
+          .value.toLowerCase();
+        const filteredTasks = sortedTasks.filter(
+          (task) =>
+            task.title.toLowerCase().includes(searchTerm) ||
+            task.description.toLowerCase().includes(searchTerm)
+        );
+
+        const filteredCompletedTasks = sortedCompletedTasks.filter(
+          (task) =>
+            task.title.toLowerCase().includes(searchTerm) ||
+            task.description.toLowerCase().includes(searchTerm)
+        );
+
+        // Render active tasks
+        if (filteredTasks.length === 0) {
+          tasksList.innerHTML = `
+          <tr class="no-results">
+            <td colspan="4">No results found</td>
+          </tr>
+        `;
+        } else {
+          tasksList.innerHTML = filteredTasks
+            .map(
+              (task, index) => `
+          <tr class="${index % 2 === 0 ? "even-row" : "odd-row"}">
+            <td>${task.title}</td>
+            <td>${task.description}</td>
+            <td>${task.dateStr}</td>
+            <td class="status-cell">
+              <button class="complete" onclick="completeTask(${
+                task.id
+              })">Complete</button>
+              <button class="delete" onclick="deleteTask(${
+                task.id
+              })">Delete</button>
+            </td>
+          </tr>
+        `
+            )
+            .join("");
+        }
+
+        // Render completed tasks
+        if (filteredCompletedTasks.length === 0) {
+          completedTasksList.innerHTML = `
+          <tr class="no-results">
+            <td colspan="4">No results found</td>
+          </tr>
+        `;
+        } else {
+          completedTasksList.innerHTML = filteredCompletedTasks
+            .map(
+              (task, index) => `
+          <tr class="${index % 2 === 0 ? "even-row" : "odd-row"}">
+            <td>${task.title}</td>
+            <td>${task.description}</td>
+            <td>${task.dateStr}</td>
+            <td class="status-cell">
+              <button class="delete" onclick="deleteCompletedTask(${
+                task.id
+              })">Delete</button>
+            </td>
+          </tr>
+        `
+            )
+            .join("");
+        }
+
+        // Update sort icons
+        updateSortIcons();
+      }
+
+      // Update sort icons based on current sort state
+      function updateSortIcons() {
+        // Clear all icons first
+        document.querySelectorAll(".sort-icon").forEach((icon) => {
+          icon.textContent = "";
+        });
+
+        // Set active icons for tasks table
+        if (sortField === "title") {
+          const icon = document.getElementById("titleSortIcon");
+          icon.textContent = sortDirection === "asc" ? "▲" : "▼";
+        } else if (sortField === "date") {
+          const icon = document.getElementById("dateSortIcon");
+          icon.textContent = sortDirection === "asc" ? "▲" : "▼";
+        }
+
+        // Set active icons for completed tasks table
+        if (completedSortField === "title") {
+          const icon = document.getElementById("completedTitleSortIcon");
+          icon.textContent = completedSortDirection === "asc" ? "▲" : "▼";
+        } else if (completedSortField === "date") {
+          const icon = document.getElementById("completedDateSortIcon");
+          icon.textContent = completedSortDirection === "asc" ? "▲" : "▼";
+        }
+      }
+
+      // Task actions
+      function completeTask(id) {
+        const taskIndex = tasks.findIndex((task) => task.id === id);
+        if (taskIndex !== -1) {
+          const task = tasks[taskIndex];
+          task.completed = true;
+          completedTasks.push(task);
+          tasks.splice(taskIndex, 1);
+          renderTasks();
+        }
+      }
+
+      function deleteTask(id) {
+        const taskIndex = tasks.findIndex((task) => task.id === id);
+        if (taskIndex !== -1) {
+          tasks.splice(taskIndex, 1);
+          renderTasks();
+        }
+      }
+
+      function deleteCompletedTask(id) {
+        const taskIndex = completedTasks.findIndex((task) => task.id === id);
+        if (taskIndex !== -1) {
+          completedTasks.splice(taskIndex, 1);
+          renderTasks();
+        }
+      }
+
+      // Sorting functionality
+      function sortTasks(field) {
+        if (sortField === field) {
+          sortDirection = sortDirection === "asc" ? "desc" : "asc";
+        } else {
+          sortField = field;
+          sortDirection = "asc";
+        }
+        renderTasks();
+      }
+
+      function sortCompletedTasks(field) {
+        if (completedSortField === field) {
+          completedSortDirection =
+            completedSortDirection === "asc" ? "desc" : "asc";
+        } else {
+          completedSortField = field;
+          completedSortDirection = "asc";
+        }
+        renderTasks();
+      }
+
+      // Filter tasks based on search
+      function filterTasks() {
+        renderTasks();
+      }
     </script>
   </body>
 </html>
