--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management</title>
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -58,7 +58,10 @@
               <th class="sortable" onclick="sortTasks('title')">
                 Title <span class="sort-icon" id="titleSortIcon"></span>
               </th>
-              <th>Description</th>
+              <th class="sortable" onclick="sortTasks('description')">
+                Description
+                <span class="sort-icon" id="descriptionSortIcon"></span>
+              </th>
               <th class="sortable" onclick="sortTasks('date')">
                 Due Date <span class="sort-icon" id="dateSortIcon"></span>
               </th>
@@ -82,7 +85,13 @@
                 Title
                 <span class="sort-icon" id="completedTitleSortIcon"></span>
               </th>
-              <th>Description</th>
+              <th class="sortable" onclick="sortCompletedTasks('description')">
+                Description
+                <span
+                  class="sort-icon"
+                  id="completedDescriptionSortIcon"
+                ></span>
+              </th>
               <th class="sortable" onclick="sortCompletedTasks('date')">
                 Due Date
                 <span class="sort-icon" id="completedDateSortIcon"></span>
@@ -213,6 +222,10 @@
             return sortDirection === "asc"
               ? a.title.localeCompare(b.title)
               : b.title.localeCompare(a.title);
+          } else if (sortField === "description") {
+            return sortDirection === "asc"
+              ? a.description.localeCompare(b.description)
+              : b.description.localeCompare(a.description);
           } else if (sortField === "date") {
             return sortDirection === "asc" ? a.date - b.date : b.date - a.date;
           }
@@ -224,6 +237,10 @@
             return completedSortDirection === "asc"
               ? a.title.localeCompare(b.title)
               : b.title.localeCompare(a.title);
+          } else if (completedSortField === "description") {
+            return completedSortDirection === "asc"
+              ? a.description.localeCompare(b.description)
+              : b.description.localeCompare(a.description);
           } else if (completedSortField === "date") {
             return completedSortDirection === "asc"
               ? a.date - b.date
@@ -318,6 +335,9 @@
         if (sortField === "title") {
           const icon = document.getElementById("titleSortIcon");
           icon.textContent = sortDirection === "asc" ? "▲" : "▼";
+        } else if (sortField === "description") {
+          const icon = document.getElementById("descriptionSortIcon");
+          icon.textContent = sortDirection === "asc" ? "▲" : "▼";
         } else if (sortField === "date") {
           const icon = document.getElementById("dateSortIcon");
           icon.textContent = sortDirection === "asc" ? "▲" : "▼";
@@ -326,6 +346,9 @@
         // Set active icons for completed tasks table
         if (completedSortField === "title") {
           const icon = document.getElementById("completedTitleSortIcon");
+          icon.textContent = completedSortDirection === "asc" ? "▲" : "▼";
+        } else if (completedSortField === "description") {
+          const icon = document.getElementById("completedDescriptionSortIcon");
           icon.textContent = completedSortDirection === "asc" ? "▲" : "▼";
         } else if (completedSortField === "date") {
           const icon = document.getElementById("completedDateSortIcon");
