--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management</title>
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -206,7 +206,8 @@
           const fp = document.querySelector("#taskDate")._flatpickr;
           fp.setDate(today);
 
-          alert("Task added successfully!");
+          // Alert is gone
+          // alert('Task added successfully!');
         });
 
         // Set initial sort field
