--- a/static/index.html
+++ b/static/index.html
@@ -288,10 +288,10 @@
             .map(
               (task, index) => `
           <tr class="${index % 2 === 0 ? "even-row" : "odd-row"}">
-            <td>${task.title}</td>
-            <td>${task.description}</td>
-            <td>${task.dateStr}</td>
-            <td class="status-cell">
+            <td data-label="Title">${task.title}</td>
+            <td data-label="Description">${task.description}</td>
+            <td data-label="Due Date">${task.dateStr}</td>
+            <td data-label="Actions" class="status-cell">
               <button class="complete" onclick="completeTask(${
                 task.id
               })">Complete</button>
@@ -317,10 +317,10 @@
             .map(
               (task, index) => `
           <tr class="${index % 2 === 0 ? "even-row" : "odd-row"}">
-            <td>${task.title}</td>
-            <td>${task.description}</td>
-            <td>${task.dateStr}</td>
-            <td class="status-cell">
+            <td data-label="Title">${task.title}</td>
+            <td data-label="Description">${task.description}</td>
+            <td data-label="Due Date">${task.dateStr}</td>
+            <td data-label="Actions" class="status-cell">
               <button class="delete" onclick="deleteCompletedTask(${
                 task.id
               })">Delete</button>
