--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
         <div class="no-results">No results found</div>
       </div>
 
-      <h2>Completed Tasks</h2>
+      <h2 class="completed-tasks-header">Completed Tasks</h2>
       <div class="task-list" id="completedTasksList">
         <div class="no-results">No results found</div>
       </div>
